
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u8 ;
typedef int u16 ;



__attribute__((used)) static void rbuPutU16(u8 *aBuf, u16 iVal){
  aBuf[0] = (iVal >> 8) & 0xFF;
  aBuf[1] = (iVal >> 0) & 0xFF;
}
